init for ap properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-numeric.dictionary.name=/num.txt
-symbolic.dictionary.name=/sym.txt
-dictionary.storage.path=../webapps/Dictionary-1.0/WEB-INF/classes/dictionaryfiles
-#dictionary.storage.path=C:/Java/apache-tomcat-9.0.65/webapps/Dictionary-1.0/WEB-INF/classes/dictionaryfiles
+row.path=C:/Java/apache-tomcat-9.0.65/bin/row.txt
+word.path=C:/Java/apache-tomcat-9.0.65/bin/word.txt
+language.path=C:/Java/apache-tomcat-9.0.65/bin/language.txt
 
